<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".activity.commanActivity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/logothrucare"
            android:layout_marginTop="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/sign_in_for_whom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="5dp"
            android:text="@string/for_patient" />
        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:text="@string/email_username"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/edittext_background"
            android:maxLines="1"
            android:hint="@string/enter_email_username"
            android:maxLength="25"
            android:layout_height="45dp" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:text="@string/password"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/enter_password"
            android:background="@drawable/edittext_background"
            android:maxLines="1"
            android:maxLength="25" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_biometric"
                android:layout_weight="1"
                android:visibility="invisible"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:text="@string/login_with_biometric"
                android:gravity="start"
                android:textColor="@color/forget_password_text"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:text="@string/forget_password"
                android:gravity="end"
                android:textColor="@color/forget_password_text"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/signin_button_shape"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_marginStart="70dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>