<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.patient.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/medication_report" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/light_gray"
        android:layout_height="2dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/medication"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_medication"
            android:editable="false"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/medication"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Reason"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMedicationReaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
      <LinearLayout
          android:visibility="gone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal">
          <Spinner
              android:id="@+id/spinner_reason"
              android:layout_width="0dp"
              android:layout_weight=".9"
              android:layout_height="45dp"
              android:layout_marginTop="10dp"
              android:background="@drawable/edittext_background"
              android:hint="@string/reaction"
              android:maxLength="25"
              android:layout_marginEnd="10dp"
              android:maxLines="1"
              android:padding="10dp" />

          <ImageView
              android:id="@+id/img_plus"
              android:layout_width="0dp"
              android:layout_weight=".1"
              android:layout_margin="15dp"
              android:layout_gravity="center"
              android:background="@drawable/plus"
              android:layout_height="wrap_content" />
      </LinearLayout>

        <LinearLayout
            android:id="@+id/lln_reason_add"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner_reason1"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/reaction"
                android:maxLength="25"
                android:layout_marginEnd="10dp"
                android:maxLines="1"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/img_plus1"
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:background="@drawable/plus"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lln_reason_add1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/spinner_reason_medication"
                android:layout_width="0dp"
                android:layout_weight=".9"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/reaction"
                android:maxLength="25"
                android:layout_marginEnd="10dp"
                android:maxLines="1"
                android:padding="10dp" />

            <ImageView
                android:id="@+id/img_plus2"
                android:layout_width="0dp"
                android:layout_weight=".1"
                android:layout_margin="15dp"
                android:layout_gravity="center"
                android:background="@drawable/plus"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText

            android:id="@+id/date_medication_provider"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:editable="false"
            android:clickable="true"
            android:background="@drawable/edittext_background"
            android:hint="Onset Date"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Status"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_status_medication"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:hint="Status"
            android:maxLength="25"
            android:maxLines="1"
            android:padding="10dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_add_more_medication"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="20dp"
                android:layout_weight=".5"
                android:background="@drawable/round_shape_for_blue"
                android:gravity="center"
                android:text="Add more"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_save_add_medication_report"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="15dp"
                android:layout_weight=".5"
                android:background="@drawable/round_shape_white_colo"
                android:gravity="center"
                android:text="Save &amp; Continue"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>